refactor(CarRepository): change repo collection from List to Map